objects/Account.object
<CustomObject>
    <fields>
        <fullName>MktOppYTDIndustryPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp YTD Industry Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppYTDMarketShareNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp YTD Market Share Net Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppYTDMarketSharePurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp YTD Market Share Purchases</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppYTDNatixisNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp YTD Natixis Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppYTDNatixisPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp YTD Natixis Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppYTDNatixisRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp YTD Natixis Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MyCoverageWork__c</fullName>
        <description>Target for delete; this field should not be exposed to users.  It's necessary because CASE statements do not return booleans.  It is used by the My Coverage field, which turns the value in this field into a boolean.</description>
        <formula>CASE( $User.ActivityChannelName__c ,
"ADU",If ( BEGINS($User.ActivityTerritoryZoneName__c, "IC") || BEGINS($User.ActivityTerritoryZoneName__c, "RD"), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ZonesCovered__c, ZoneADU_IDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneADU_IDU__c)), 1, 0), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ActivityTerritoryZoneName__c, ZoneADU_IDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneADU_IDU__c)), 1, 0)),
"IDU",If ( BEGINS($User.ActivityTerritoryZoneName__c, "IC") || BEGINS($User.ActivityTerritoryZoneName__c, "RD"), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ZonesCovered__c, ZoneADU_IDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneADU_IDU__c)), 1, 0), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ActivityTerritoryZoneName__c, ZoneADU_IDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneADU_IDU__c)), 1, 0)),
"RCDU",If ( BEGINS($User.ActivityTerritoryZoneName__c, "IC") || BEGINS($User.ActivityTerritoryZoneName__c, "RD"), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ZonesCovered__c, ZoneRCDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRCDU__c)), 1, 0), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ActivityTerritoryZoneName__c, ZoneRCDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRCDU__c)), 1, 0)),
"RADU",If ( BEGINS($User.ActivityTerritoryZoneName__c, "IC") || BEGINS($User.ActivityTerritoryZoneName__c, "RD"), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ZonesCovered__c, ZoneRADU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRADU__c)), 1, 0), 
if (CONTAINS(Territories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ActivityTerritoryZoneName__c, ZoneRADU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRADU__c)), 1, 0)),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Coverage Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyCoverage__c</fullName>
        <description>Target for delete; TRUE if the account is covered by the user who is logged in, FALSE if the contact is not</description>
        <formula>If ( MyCoverageWork__c = 1 ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, this account is covered by you or one of the external sales people you cover.</inlineHelpText>
        <label>My Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyTerritory__c</fullName>
        <description>Target for delete; we can't use this authoritatively for determining "my territory" anymore</description>
        <formula>if( !isnull(Territories__c) &amp;&amp; CONTAINS($User.DefaultTerritory__c , Territories__c ) , true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NatixisAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPPYNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PPY Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPPYPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PPY Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPPYRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PPY Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPYNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PY Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPYPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PY Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPYRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PY Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisR12MNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis R12M Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisR12MPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis R12M Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisR12MRedemption__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis R12M Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisYTDNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis YTD Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisYTDPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis YTD Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisYTDRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis YTD Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberOfOpenTasks__c</fullName>
        <description>The number of open tasks this Account has. Controlled by a trigger on task.</description>
        <inlineHelpText>The number of open tasks this Account has.</inlineHelpText>
        <label>Number of Open Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofCallsMeetings__c</fullName>
        <description>Sum of the YTD Number of Calls and YTD Number of Meetings</description>
        <formula>YTDNumberofCalls__c +  YTDNumberOfMeetings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Number of Calls/Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OffshoreShare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is flagged when the Branch record details and related Contacts and Activities are shared with Global Connect.</description>
        <inlineHelpText>This field is flagged when the Branch record details and related Contacts and Activities are shared with Global Connect.</inlineHelpText>
        <label>Offshore Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRORotationFS__c</fullName>
        <description>Target for deletion; The Rotation correlates to the sales person's rotation within a Zone for Fiduciary Services</description>
        <inlineHelpText>The Rotation correlates to the sales person's rotation within a Zone</inlineHelpText>
        <label>Rotation FS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRORotationIAG__c</fullName>
        <description>Target for deletion; The Rotation correlates to the sales person's rotation within a Zone for IAG</description>
        <inlineHelpText>The Rotation correlates to the sales person's rotation within a Zone</inlineHelpText>
        <label>Rotation IAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRORotationWHSE__c</fullName>
        <description>Target for deletion; The Rotation correlates to the sales person's rotation within a Zone for Wirehouse</description>
        <inlineHelpText>The Rotation correlates to the sales person's rotation within a Zone.</inlineHelpText>
        <label>Rotation Wirehouse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWFirmName__c</fullName>
        <description>Portal Name of Firm</description>
        <inlineHelpText>Portal Name of Firm</inlineHelpText>
        <label>Private Wealth Firm Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PWPortalId__c</fullName>
        <description>Used to establish link between Portal and Vestmark.</description>
        <externalId>true</externalId>
        <inlineHelpText>Portal ID of Firm</inlineHelpText>
        <label>Private Wealth ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PYMAPurchases__c</fullName>
        <label>PY MA Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PYMARedemptions__c</fullName>
        <label>PY MA Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PYMFPurchases__c</fullName>
        <label>PY MF Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PYMFRedemptions__c</fullName>
        <label>PY MF Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <description>Plan Type provided by FINSearch</description>
        <inlineHelpText>Plan Type provided by FINSearch data</inlineHelpText>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deferred Compensation</fullName>
                </value>
                <value>
                    <fullName>Corporate D.B.</fullName>
                </value>
                <value>
                    <fullName>Nonprofit Membership Association</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
                <value>
                    <fullName>Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Public D.B.</fullName>
                </value>
                <value>
                    <fullName>Public D.C.</fullName>
                </value>
                <value>
                    <fullName>Hospital Plan</fullName>
                </value>
                <value>
                    <fullName>Operating Fund</fullName>
                </value>
                <value>
                    <fullName>529 Plan</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Religious Order</fullName>
                </value>
                <value>
                    <fullName>Corporate D.C.</fullName>
                </value>
                <value>
                    <fullName>Permanent Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PotentialModel__c</fullName>
        <description>Integrated from EDW and calculated by DIG</description>
        <label>Potential Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Firm is on FinSearches Firm Watch List</fullName>
                </value>
                <value>
                    <fullName>Firm has high Institutional Plan Size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PotentialReason__c</fullName>
        <description>Integrated from EDW and calculated by DIG; used in hover for Key Insights</description>
        <label>Potential Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PotentialScore__c</fullName>
        <description>Integrated from EDW and calculated by DIG</description>
        <label>Potential Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryContactEmail__c</fullName>
        <description>A reference to the primary contact's email address</description>
        <formula>PrimaryOfficeContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactPhone__c</fullName>
        <description>A reference to the primary contact's phone</description>
        <formula>PrimaryOfficeContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryOfficeContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the main contact person at the branch that is called or emailed. This will automatically set the Primary Contact flag on the Contact Details record.</description>
        <inlineHelpText>Select the main contact person at the branch that is called or emailed. This will automatically set the Primary Contact flag on the Contact Details record.</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriorPYMAPurchases__c</fullName>
        <label>Prior PY MA Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorPYMARedemptions__c</fullName>
        <label>Prior PY MA Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorPYMFPurchases__c</fullName>
        <label>Prior PY MF Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorPYMFRedemptions__c</fullName>
        <label>Prior PY MF Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrivatePlacementApproved__c</fullName>
        <description>Checkbox indicating if the firm is private placement approved</description>
        <formula>PrivatePlacementsApprovedCount__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checkbox indicating if the firm is private placement approved</inlineHelpText>
        <label>Private Placement Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrivatePlacementExpirationDate__c</fullName>
        <description>Max expiration date for a private placement request where approval status is approved</description>
        <inlineHelpText>Expiration date for a private placement</inlineHelpText>
        <label>Private Placement Expiration Date</label>
        <summarizedField>PrivatePlacementRequest__c.ExpirationDate__c</summarizedField>
        <summaryFilterItems>
            <field>PrivatePlacementRequest__c.ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>PrivatePlacementRequest__c.FirmOffice__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrivatePlacementsApprovedCount__c</fullName>
        <description>Counts the number of private placements in Approved status; should be invisible to users.</description>
        <label>Private Placements Approved Count</label>
        <summaryFilterItems>
            <field>PrivatePlacementRequest__c.ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>PrivatePlacementRequest__c.FirmOffice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrivateWealth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by the process builder if any related contact has the Private Wealth flag checked</description>
        <inlineHelpText>Auto populated if any related contact has the Private Wealth flag checked.</inlineHelpText>
        <label>Private Wealth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductOfInterest__c</fullName>
        <description>Declarative roll-up that concatenates the Activity Products of the last 6 months.</description>
        <inlineHelpText>Based on Activity Product of Interest in the past 6 Months</inlineHelpText>
        <label>Products Of Interest Last 6 Months</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QTDActvityTarget__c</fullName>
        <description>Target for deletion; Goal for number of activities based on tier</description>
        <formula>CASE(Tier__c, '1', 3, '2', 2,'3',1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTD Actvities Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegisteredFirmType__c</fullName>
        <description>Integrated from EDW</description>
        <label>Registered Firm Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskModel__c</fullName>
        <description>Integrated from EDW and calculated by DIG</description>
        <label>Risk Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Firm is on FinSearches Watch List</fullName>
                </value>
                <value>
                    <fullName>Risk Model 2</fullName>
                </value>
                <value>
                    <fullName>Risk Model 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskReason__c</fullName>
        <description>Integrated from EDW and calculated by DIG; used in hover for Key Insights</description>
        <label>Risk Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RiskScore__c</fullName>
        <description>Integrated from EDW and calculated by DIG</description>
        <label>Risk Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RotationADU_IDU__c</fullName>
        <description>Target for deletion; Rotation is typically a designation to help manage a territory and the travel rotation.</description>
        <inlineHelpText>Rotation is typically a designation to help manage a territory and the travel rotation.</inlineHelpText>
        <label>Rotation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>